force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Please select: commercial or technical complaint</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Complaint</fullName>
            </value>
            <value>
                <fullName>Technical Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>