force-app/main/default/objects/Case/fields/CreditNote__c.field-meta.xml
<CustomField>
    <fullName>CreditNote__c</fullName>
    <label>Credit Note</label>
    <type>Url</type>
</CustomField>