force-app/main/default/objects/Case/fields/CreditNoteValue__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteValue__c</fullName>
    <label>Credit Note Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>