force-app/main/default/objects/Case/fields/DillingerSalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>DillingerSalesDepartment__c</fullName>
    <label>Dillinger sales department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Machinery and Construction Equipment</fullName>
            </value>
            <value>
                <fullName>Energy Transmission and Processing</fullName>
            </value>
            <value>
                <fullName>Wind Power and Construction</fullName>
            </value>
            <value>
                <fullName>Steel Service Center, Plate Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>