force-app/main/default/objects/Case/fields/InitialDemand__c.field-meta.xml
<CustomField>
    <fullName>InitialDemand__c</fullName>
    <inlineHelpText>Please enter requested compensation value</inlineHelpText>
    <label>Initial Demand</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>