force-app/main/default/objects/Case/fields/Mill__c.field-meta.xml
<CustomField>
    <fullName>Mill__c</fullName>
    <label>Mill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>