force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency - Type error</fullName>
            </value>
            <value>
                <fullName>Bonus Agreement</fullName>
            </value>
            <value>
                <fullName>Annual Quantity Discount</fullName>
            </value>
            <value>
                <fullName>Delivery delay</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Value Date</fullName>
            </value>
            <value>
                <fullName>Plate Identification</fullName>
            </value>
            <value>
                <fullName>Internal Soundness</fullName>
            </value>
            <value>
                <fullName>Dimensional deviation</fullName>
            </value>
            <value>
                <fullName>Mech.-tech./chem. Properties</fullName>
            </value>
            <value>
                <fullName>Surface defect</fullName>
            </value>
            <value>
                <fullName>Other Rolling or Plate Errors</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Customer processing issues</fullName>
            </value>
            <value>
                <fullName>Incorrect/Missing Specification</fullName>
            </value>
            <value>
                <fullName>Certificate Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>