force-app/main/default/objects/Case/fields/SAPComplaintNr__c.field-meta.xml
<CustomField>
    <fullName>SAPComplaintNr__c</fullName> 
    <label>SAP Complaint Nr.</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>