force-app/main/default/objects/Case/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName> 
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>