force-app/main/default/objects/Case/fields/SuccessorCustomer__c.field-meta.xml
<CustomField>
    <fullName>SuccessorCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Predecessor Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>