force-app/main/default/objects/Case/fields/SuppliedCity__c.field-meta.xml
<CustomField>
    <fullName>SuppliedCity__c</fullName>      
    <label>City</label> 
    <length>255</length>
    <type>Text</type>
</CustomField>