force-app/main/default/objects/Case/fields/SuppliedCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>SuppliedCustomerNumber__c</fullName>
    <label>Customer No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>