force-app/main/default/objects/Case/fields/SuppliedLastName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedLastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>