force-app/main/default/objects/Case/fields/SuppliedOrderNo__c.field-meta.xml
<CustomField>
    <fullName>SuppliedOrderNo__c</fullName>     
    <label>Order No. (if available)</label> 
    <length>255</length>
    <type>Text</type>
</CustomField>