force-app/main/default/objects/Case/fields/SuppliedStreet__c.field-meta.xml
<CustomField>
    <fullName>SuppliedStreet__c</fullName>
    <label>Street</label> 
    <length>255</length>
    <type>Text</type>
</CustomField>