force-app/main/default/objects/Case/fields/SuppliedZipCode__c.field-meta.xml
<CustomField>
    <fullName>SuppliedZipCode__c</fullName>     
    <label>Zipcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>