force-app/main/default/objects/Case/fields/TechnStatement__c.field-meta.xml
<CustomField>
    <fullName>TechnStatement__c</fullName>     
    <label>Techn. Statement</label> 
    <type>Url</type>
</CustomField>