force-app/main/default/objects/Case/recordTypes/Reclamation.recordType-meta.xml
<RecordType>
    <fullName>Reclamation</fullName>
    <active>true</active>
    <businessProcess>Reclamation</businessProcess>
    <label>Reclamation</label>
</RecordType>