force-app/main/default/objects/Case/recordTypes/Userregistration.recordType-meta.xml
<RecordType>
    <fullName>Userregistration</fullName>
    <active>true</active>
    <businessProcess>User Registration</businessProcess>
    <label>User registration</label>
</RecordType>