force-app/main/default/objects/Case/validationRules/restrictsettingthestatusUserCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>restrictsettingthestatusUserCreation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;User Creation&quot;) &amp;&amp;
(ISBLANK(ContactId) || (!ISNEW() &amp;&amp; ISPICKVAL(UserType__c, &quot;&quot;)) || 
 ISBLANK(AccountId))</errorConditionFormula>
    <errorMessage>Please specify the User Type, Account and Contact in order to pass the myE-Service
Registration Application on to IT for user creation.</errorMessage>
</ValidationRule>