force-app/main/default/objects/Case/listViews/myEServiceBenutzerMCE.listView-meta.xml
<ListView>
    <fullName>myEServiceBenutzerMCE</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.NAME</columns>
    <columns>SuppliedLastName__c</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.COMPANY</columns>
    <columns>SuppliedCustomerNumber__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Userregistration</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>DillingerSalesDepartment__c</field>
        <operation>equals</operation>
        <value>Machinery and Construction Equipment</value>
    </filters>
    <label>myE-Service Benutzer - MCE</label>
</ListView>