force-app/main/default/objects/Case/listViews/myEServiceOffeneAnfragenSystemAdmin.listView-meta.xml
<ListView>
    <fullName>myEServiceOffeneAnfragenSystemAdmin</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.NAME</columns>
    <columns>SuppliedLastName__c</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.COMPANY</columns>
    <columns>SuppliedCustomerNumber__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Userregistration</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>myE-Service Offene Anfragen SystemAdmin</label>
    <queue>SystemAdmins</queue>
</ListView>